fix comments and avatar