@@ -1,5 +1,6 @@
 package school.faang.user_service.publisher;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.listener.ChannelTopic;
@@ -7,23 +8,22 @@ import org.springframework.stereotype.Component;
 import school.faang.user_service.dto.event.RecommendationReceivedEvent;
 
 @Component
+@RequiredArgsConstructor
 public class RecommendationReceivedEventPublisher implements MessagePublisher<RecommendationReceivedEvent> {
 
     private final RedisTemplate<String, RecommendationReceivedEvent> redisTemplate;
-    private final ChannelTopic topic;
 
-    public RecommendationReceivedEventPublisher(RedisTemplate<String, RecommendationReceivedEvent> redisTemplate,
-                                                @Qualifier("recommendationReceivedTopic") ChannelTopic topic) {
-        this.redisTemplate = redisTemplate;
-        this.topic = topic;
-    }
+    @Qualifier("recommendationReceivedTopic")
+    private final ChannelTopic topic;
 
     @Override
     public void publish(RecommendationReceivedEvent recommendationReceivedEvent) {
         try {
             redisTemplate.convertAndSend(topic.getTopic(), recommendationReceivedEvent);
         } catch (Exception e) {
-            throw new RuntimeException("Not able to publish message to topic %s".formatted(topic.getTopic()), e);
+            throw new RuntimeException(
+                    String.format("Not able to publish message to topic %s", topic.getTopic()), e
+            );
         }
     }
 }
